<resources>
    <string name="app_name">Task Planner Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key"></string><!--edu.eci.taskplannerandroid.PREFERENCE_FILE_KEY-->
    <string name="login_image_description">Avatar</string>
    <string name="text_login">Login into your account</string>
    <string name="input_email_hint">Email</string>
    <string name="input_password_hint">Password</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="error_input_email_empty">You must enter your email</string>
    <string name="error_input_email_valid">This email is not valid. Check it</string>
    <string name="error_input_password_empty">Please enter your password</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task description</string>
    <string name="task_status">Task Status</string>
    <string name="task_due_date">Task DueDate</string>
    <string name="task_responsible">Task Responsible</string>
</resources>
